# ppa-nlp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: unit_tests.yml
data/ocr_cleanup_rulesets/: all_long_s_corrections_log.txt
docs/source/: code-docs.rst  conf.py  index.rst
envs/: ppa-images.yml  tensorboard.yml
notebooks/: 006_merge_and_save_everything.ipynb  007_pivoting_to_hathi.ipynb  008_OCR_cleanup_of_PPA_text_corpus.ipynb  008_building_plaintext_corpus.ipynb  009_OCR_cleanup_of_PPA_text_corpus.ipynb  009_fixing_hathi_excerpts.ipynb  010_missing_text_problem.ipynb  011_new_corpus_format.ipynb  012_OCR_cleanup_of_PPA_text_corpus.ipynb  013_integrating_cleanup.ipynb  020_from_ppadjango_corpus.ipynb  021_test_ppanlp_corpus_text_objs.ipynb  022_corpus_topic_modeling.ipynb  023_topicmodelpy_classes.ipynb  024_NER-analysis.ipynb  024_NER-analysis2.ipynb  024_NER.ipynb  025_sqlitecaching.ipynb  026_sqlitecaching_usage.ipynb  027_topicbert-RUN.ipynb  027_topicbert-RUN2.ipynb  027_topicbert.ipynb  027_topicbert_tests.ipynb  028_jsonl_tests.ipynb  029_NER+topics.ipynb  029_NER+topics_v2.ipynb  029_NER+topics_v3.ipynb  029_NER+topics_v4.ipynb  029_NER+topics_v5_analysis.ipynb  030_bsll_freq.ipynb  039_subcorpora-test.ipynb  039_subcorpora.ipynb  040_topic_modeling_hexameters.ipynb  120_ner_on_plaintext_corpus.ipynb  Topic_Modeling_5-inferring.ipynb  Topic_Modeling_5.ipynb
notebooks/demos/: demo_corpus_install.ipynb  demo_ppanlp_install.ipynb
notebooks/topic_modeling/: Topic_Modeling_4.ipynb  Topic_Modeling_5.ipynb  Topic_Modeling_6.ipynb  Topic_Modeling_Gensim.ipynb  Topic_Modeling_Gensim_2-testing.ipynb  Topic_Modeling_Gensim_2.ipynb  Topic_Modeling_Gensim_3.ipynb  ldavis.html
ppanlp/: __init__.py  cleanup.py  cli.py  corpus.py  ecco_hathi.py  imports.py  ner.py  page.py  ppanlp.py  subcorpus.py  text.py  topicmodel.py  utils.py
ppanlp/ocr_cleanup_rulesets/: clever_f_ſ_hack.txt  disregard_fſs_replacements.txt
python/: gvision_ocr.py
scripts/: README.md  evaluate_ocr.py  get_character_stats.py  helper.py  ocr_helper.py  transform-images.sh
scripts/envs/: ppa-ocr.yml
src/corppa/ocr/: collate_txt.py  gvision_ocr.py
src/corppa/poetry_detection/: identify_poems.py
src/corppa/poetry_detection/annotation/: add_metadata.py  annotate_poetry_txt.py  annotate_poetry_with_image.py  annotation_recipes.py  command_recipes.py  create_pageset.py  process_adjudication_data.py  prodigy.css  recipe.py
src/corppa/poetry_detection/chadwyck_healey/: build_poem_corpus.py  chadwyck.yml  get_tag_stats.py
src/corppa/poetry_detection/evaluation/: evaluate_poetry_spans.py
src/corppa/poetry_detection/passim/: README.md  build_passim_output.py  build_passim_results.py  create_passim_corpus.py  get_passim_excerpts.py  get_passim_page_results.py  passim.yml  run_passim.sh
src/corppa/utils/: __init__.py  add_image_relpaths.py  build_text_corpus.py  filter.py  generate_page_set.py  path_utils.py
src/image-projection/: create_image_meta.py  create_sprite.py  extract_features.py  reduce_features.py
tensorboard/: template.pbtxt
test/test_ocr/: test_collate_text.py  test_gvision_ocr.py
test/test_poetry_detection/: test_identify_poems.py
test/test_poetry_detection/test_annotation/: test_annotation_recipes.py  test_process_adjudication_data.py  test_recipe.py
test/test_poetry_detection/test_evaluation/: test_evaluate_poetry_spans.py
test/test_utils/: test_build_text_corpus.py  test_filter.py  test_path_utils.py
tests/: test_corpus.py
