[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corppa"
description = "Utilities for working with Princeton Prosody Archive full-text corpus"
requires-python = ">=3.10"
readme = "README.md"
# license TBD
#license.file = "LICENSE"
#license = {text = "Apache-2"} 
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",    
    "Topic :: Utilities",
]
dependencies = [
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/corppa/__init__.py"

[project.optional-dependencies]
test = [
  "pytest",
]