[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corppa"
description = "Utilities for working with Princeton Prosody Archive full-text corpus"
requires-python = ">=3.12"
readme = "README.md"
# license TBD
#license.file = "LICENSE"
#license = {text = "Apache-2"} 
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",    
    "Topic :: Utilities",
]
dynamic = ["version"]
dependencies = [
	"orjsonl",
	"tqdm",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
ocr = ["google-cloud-vision"]
dev = ["pre-commit", "corppa[test]", "corppa[ocr]"]

[project.scripts]
corppa-filter-corpus = "corppa.utils.filter:main"
corppa-ocr = "corppa.ocr.gvision_ocr:main"

[tool.hatch.version]
path = "src/corppa/__init__.py"
