[metadata]
name = ppanlp
version = attr: ppanlp._version.__version__
author = The Center for Digital Humanities at Princeton
author_email = cdhdevteam@princeton.edu
description = NLP code and data for the Princeton Prosody Archive
long_description = file: README.md
license = Apache License, Version 2.0
long_description_content_type = text/markdown
url = https://github.com/Princeton-CDH/ppa-nlp
project_urls =
    Project Home = https://cdh.princeton.edu/
    Bug Tracker = https://github.com/Princeton-CDH/ppa-nlp/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = 
    ppanlp
    data/ocr_cleanup_rulesets
python_requires = >=3.9, <3.11
install_requires = 
    pandas
    sqlitedict
    bs4
    tqdm
    orjson
    orjsonl
    intspan
    openpyxl
    jsonlines
    wordfreq
    nltk
    tomotopy
    pyLDAvis
    stanza
    numpy<1.26,>=1.20
    pandas==1.5.3
    enlighten
    peewee
    bertopic
    loguru
    humanfriendly
    xlsxwriter
include_package_data = True

[options.extras_require]
all =
    %(dev)s
    %(test)s
dev =
    black>=22.10.0
    pre-commit>=2.20.0
    tox
    sphinx
    twine
    wheel
    pytest-cov
test =
    pytest>=7.2
    pytest-ordering

[options.entry_points]
console_scripts =
    ppanlp = ppanlp.cli:run

